# azure-dev

./: .gitattributes  .github-pr-body.md  .gitignore  .markdownlint.json  AGENTS.md  CONTRIBUTING.md  Djwshareadc-hosted-agentzipuploadazdcliprcomments8146pr-body-original.md  ENVIRONMENT_VARIABLES.md  NOTICE.txt  README.md  SECURITY.md  SUPPORT.md  after.html  before.html  context7.json  demo.html  find_string_constructors.go  go.mod  go.sum  go.work  go.work.sum  magefile.go  manual-test-provisioning.md  package-lock.json  test.html  workitems.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  COPILOT_COMPARISON.md  COPILOT_REVIEW_SETUP.md  IMPLEMENTATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  actionlint.yaml  copilot-instructions.md  fabricbot.json  mcp.json  shellcheck-matcher.json
azd-wired/: go.mod  go.sum  main.go
cli/: Dockerfile  go.work  go.work.sum  version.txt
cli/azd/pkg/oneauth/bridge/: CMakeLists.txt  CMakePresets.json  bridge.cpp  bridge.h  vcpkg-configuration.json  vcpkg.json
d5/: README.md  azure.yaml
d8/: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  azure.yaml  next-steps.md  package-lock.json  package.json
docs/: CONTRIBUTING.md  CONTRIBUTING.templates.md  README.md  develop-templates.md  github-issues-management.md
templates/todo/api/python/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
templates/todo/api/python/tests/: conftest.py  test_main.py
templates/todo/api/python/todo/: app.py  models.py  routes.py
(+7208 files in other folders)
