[tool.poetry]
name = "todo"
version = "0.1.0"
description = "Simple Todo API"
license = "MIT"
packages = [
    { include = "todo" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
beanie = "*"
python-dotenv = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
